--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <label>disabled checked</label>
         </div>
 
-        <h3>Thème avec une image sprite générée à partir des images dans le dossier "sprites/*"</h3>
+        <h3>Thème avec une sprite générée à partir des images dans le dossier "sprites/*"</h3>
         <div class="themings-js" data-theme="sprites">
             <input type="checkbox" value="1" name="main_test1" />
             <label>default</label>
